--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="somefont.css">
 </head>
 <body>
-    Demo project
+    Demo file
     <ul>
         <li>first</li>
         <li>second</li>
