--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
     <link rel="stylesheet" href="somefont.css">
 </head>
 <body>
-    Demo file
-    <ul>
-        <li>first</li>
-        <li>second</li>
-    </ul>
+    <a href="payment.html">Payment</a>
     <footer>&copy; 2019</footer>
 </body>
 </html>
