--- a/payment.html
+++ b/payment.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Payment</title>
     <link rel="stylesheet" href="somefont.css">
+    <script>/* Yandex Metrika* /</script>
 </head>
 <body>
     Payment
